# botz

emma/: .gitignore  MANIFEST.in  README.MD  commands.txt  pyproject.toml  requirements.txt  test.py
emma/src/: main.py
emma/src/app/: fapp.py  main.py
